Fix overflow

--- a/src/app/trianglifier/form-wrapper/form-wrapper.component.scss
+++ b/src/app/trianglifier/form-wrapper/form-wrapper.component.scss
@@ -10,6 +10,7 @@
   padding: 20px;
   box-shadow: 2px 0 8px 0 rgba(0,0,0,0.54);
   min-width: 250px;
+  overflow: auto;
 }
 
 .main {
@@ -25,7 +26,6 @@
   display: flex;
   flex-direction: column;
   max-height: calc(100vh - 64px);
-  overflow: auto;
 }
 
 .colors {
@@ -57,11 +57,8 @@
 @media screen and (min-width: 800px) {
   .wrapper {
     flex-direction: row;
-    overflow: hidden;
   }
-  .menu {
-    overflow: auto;
-  }
+
   .main {
     min-width: 500px;
     flex: 3;
